--- a/car_price_prediction.ipynb
+++ b/car_price_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa0S/tYPCDoWPo3jhKRpfC",
+      "authorship_tag": "ABX9TyP66NKQQufEm+vXNsI0z+lw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8PlEZsn-HVnR",
-        "outputId": "a26a5d59-41eb-4efc-d91e-2d73fb8c4083"
+        "outputId": "1d73b58f-390a-4498-9ae7-828fa61f0046"
       },
       "execution_count": 3,
       "outputs": [
@@ -79,65 +79,10 @@
         "print(df.describe())"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KDShUhYNHlPC",
-        "outputId": "1de4b07f-3553-4020-b70f-4ce12d213c79"
+        "id": "KDShUhYNHlPC"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "------ Data Sample -----\n",
-            "  Car_Name  Year  Selling_Price  Present_Price  Kms_Driven Fuel_Type  \\\n",
-            "0     ritz  2014           3.35           5.59       27000    Petrol   \n",
-            "1      sx4  2013           4.75           9.54       43000    Diesel   \n",
-            "2     ciaz  2017           7.25           9.85        6900    Petrol   \n",
-            "3  wagon r  2011           2.85           4.15        5200    Petrol   \n",
-            "4    swift  2014           4.60           6.87       42450    Diesel   \n",
-            "\n",
-            "  Seller_Type Transmission  Owner  \n",
-            "0      Dealer       Manual      0  \n",
-            "1      Dealer       Manual      0  \n",
-            "2      Dealer       Manual      0  \n",
-            "3      Dealer       Manual      0  \n",
-            "4      Dealer       Manual      0  \n",
-            "\n",
-            " --- Dataset Info ---\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 301 entries, 0 to 300\n",
-            "Data columns (total 9 columns):\n",
-            " #   Column         Non-Null Count  Dtype  \n",
-            "---  ------         --------------  -----  \n",
-            " 0   Car_Name       301 non-null    object \n",
-            " 1   Year           301 non-null    int64  \n",
-            " 2   Selling_Price  301 non-null    float64\n",
-            " 3   Present_Price  301 non-null    float64\n",
-            " 4   Kms_Driven     301 non-null    int64  \n",
-            " 5   Fuel_Type      301 non-null    object \n",
-            " 6   Seller_Type    301 non-null    object \n",
-            " 7   Transmission   301 non-null    object \n",
-            " 8   Owner          301 non-null    int64  \n",
-            "dtypes: float64(2), int64(3), object(4)\n",
-            "memory usage: 21.3+ KB\n",
-            "\n",
-            " --- Dataset Description ---\n",
-            "              Year  Selling_Price  Present_Price     Kms_Driven       Owner\n",
-            "count   301.000000     301.000000     301.000000     301.000000  301.000000\n",
-            "mean   2013.627907       4.661296       7.628472   36947.205980    0.043189\n",
-            "std       2.891554       5.082812       8.644115   38886.883882    0.247915\n",
-            "min    2003.000000       0.100000       0.320000     500.000000    0.000000\n",
-            "25%    2012.000000       0.900000       1.200000   15000.000000    0.000000\n",
-            "50%    2014.000000       3.600000       6.400000   32000.000000    0.000000\n",
-            "75%    2016.000000       6.000000       9.900000   48767.000000    0.000000\n",
-            "max    2018.000000      35.000000      92.600000  500000.000000    3.000000\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -150,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BDW1qgIAIP8z",
-        "outputId": "c2901f8e-a506-4a88-efb8-2fb7e3ddde6f"
+        "outputId": "1397ed74-a784-4ed5-b92b-4682f7726a33"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,9 +132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F6hXucXoImCr",
-        "outputId": "2bf7989e-5808-4d04-d22b-806dc2371aa6"
+        "outputId": "2467b784-7c58-4b0b-8d46-14b265d8a85d"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KnzXpKM7JATJ",
-        "outputId": "98451e2b-f873-4877-82f7-d3ebbb0f1113"
+        "outputId": "2445b4d1-d370-412e-b58c-3a73b1dd4d6d"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,11 +261,11 @@
         "id": "IOvHhvph5xM0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 796
+          "height": 928
         },
-        "outputId": "f50051db-80e4-453b-9134-4e047a60d470"
+        "outputId": "2f3e0438-7b65-4d87-d722-57792b1a0e12"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,9 +342,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "0c9b91c9-86ce-4791-84b8-d44454790715"
+        "outputId": "688afa93-ccf5-4b45-b9ee-4156758be1d6"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -439,7 +384,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -482,11 +427,11 @@
         "id": "1bev9a047BrA",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 826
+          "height": 1000
         },
-        "outputId": "d6223e02-87d6-417a-d5c1-e06b1c155546"
+        "outputId": "4eddb74f-6595-4c5c-f02d-e2f2663cd49b"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -534,11 +479,11 @@
         "id": "j8h4hZhg8WXo",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 230
+          "height": 483
         },
-        "outputId": "67d73f49-ec6f-4541-8cde-9c7c4bc3ada6"
+        "outputId": "f1aea683-fe0d-4c30-d88d-4e61696992ad"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -565,9 +510,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca0358ea-f855-47e1-bd4a-5197d69294e2"
+        "outputId": "d9ab63dd-a6ac-47fa-c134-4dfbfbb57851"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +585,7 @@
       "metadata": {
         "id": "GbISvE2fHmkx"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -666,9 +611,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c451851-ed7b-4a65-92ee-db2865d8b30c"
+        "outputId": "7139199f-fd82-4c9a-ccff-b54616fa91b7"
       },
-      "execution_count": 31,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,8 +638,8 @@
         "rf_reg = RandomForestRegressor(random_state = 42)\n",
         "\n",
         "param_dist = {\n",
-        "    'n_estimators': [100, 200, 300, 400],\n",
-        "    'max_features' : ['auto', 'sqrt', 'log2'],\n",
+        "    'n_estimators': [100, 200, 300, 400, 500],\n",
+        "    'max_features' : ['sqrt', 'log2'],\n",
         "    'max_depth': [None, 10, 20, 30, 40, 50],\n",
         "    'min_samples_split': [2, 5, 10],\n",
         "    'min_samples_leaf': [1, 2, 4]\n",
@@ -718,66 +663,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0fb3116d-7d9d-4849-cca3-c25bcfed2daf"
+        "outputId": "3d0acdc2-cb6a-4330-9da6-4848cdd9b9a6"
       },
-      "execution_count": 33,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py:528: FitFailedWarning: \n",
-            "84 fits failed out of a total of 300.\n",
-            "The score on these train-test partitions for these parameters will be set to nan.\n",
-            "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-            "\n",
-            "Below are more details about the failures:\n",
-            "--------------------------------------------------------------------------------\n",
-            "84 fits failed with the following error:\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py\", line 866, in _fit_and_score\n",
-            "    estimator.fit(X_train, y_train, **fit_params)\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 1382, in wrapper\n",
-            "    estimator._validate_params()\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 436, in _validate_params\n",
-            "    validate_parameter_constraints(\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/utils/_param_validation.py\", line 98, in validate_parameter_constraints\n",
-            "    raise InvalidParameterError(\n",
-            "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestRegressor must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'log2', 'sqrt'} or None. Got 'auto' instead.\n",
-            "\n",
-            "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_search.py:1108: UserWarning: One or more of the test scores are non-finite: [0.50314822        nan 0.68750761 0.30784248 0.81916987        nan\n",
-            " 0.77886571        nan        nan 0.48244772 0.48244772 0.48244772\n",
-            "        nan 0.76321868        nan        nan 0.83694819 0.67316427\n",
-            " 0.47541696        nan        nan 0.48723345        nan 0.69114918\n",
-            " 0.30385772        nan 0.47541696 0.75841128 0.82524653        nan\n",
-            " 0.76220084 0.69483361 0.48086945 0.77918803        nan 0.30926274\n",
-            "        nan 0.69689126 0.29185317 0.69118123 0.66229156 0.83362539\n",
-            " 0.51769874 0.78838201 0.69091132        nan 0.78838201 0.69483361\n",
-            " 0.78397024        nan 0.29306586 0.51769874 0.50089183 0.68789186\n",
-            "        nan        nan 0.49713428 0.29222214 0.77647927 0.69083837\n",
-            " 0.80113261        nan 0.30926274 0.81380403 0.81295966 0.51975942\n",
-            "        nan        nan 0.69191499 0.48244772 0.48244772 0.80210848\n",
-            " 0.68789186 0.48723345        nan 0.83733105 0.30385772 0.30784248\n",
-            "        nan 0.8250883  0.76311883 0.48086945 0.30385772        nan\n",
-            " 0.50314822        nan 0.52536679 0.81284432 0.68789186 0.48244772\n",
-            "        nan 0.78560757 0.81468423        nan        nan 0.66325244\n",
-            " 0.30135228 0.80180694 0.69091132 0.81387488]\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Best HyperParameters: {'n_estimators': 400, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': None}\n",
+            "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n",
+            "Best HyperParameters: {'n_estimators': 300, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': None}\n",
             "Mean Squared Error: 1.30\n",
             "Root Mean Squared Error: 1.14\n"
           ]
@@ -797,9 +692,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3396495c-7927-4ca9-dbb4-c69da8e539f5"
+        "outputId": "3bf0f8b7-3975-447a-f8cd-5a1c5ac35eab"
       },
-      "execution_count": 34,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
